<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_logger</name>
  <version>0.0.0</version>
  <description>Stereo Logger</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <depend>ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
